# MatPly

./: Auxiliary.c  Auxiliary.h  CHANGELOG.md  CMakeLists.txt  LICENSE  MakeFile  MatBox.c  main.c  matbox.h  matply.c  matply.h  readme.md  vector_extend.c  vector_extend.h
MatPly_dart/: core.dart  errors.dart  functional_core.dart  list_extend.dart  main.dart  matply.dart  matply_api.dart  pubspec.yaml  test.dart
MatPly_dart/.dart_tool/: package_config.json
matply/: CHANGELOG.md  README.md  mkdocs.yml  pubspec.yaml
matply/assets/C/: CMakeLists.txt  MakeFile  matply.c  matply.h  mp_auxiliary.c  mp_auxiliary.h  mp_base.c  mp_base.h  mp_cfg.c  mp_cfg.h  mp_geometry.c  mp_geometry.h  mp_linalg.c  mp_linalg.h  mp_manage.c  mp_manage.h  mp_omp.c  mp_omp.h  mp_point2d.c  mp_point2d.h  mp_random.c  mp_random.h
matply/doc/: index.md
matply/doc/API/Dart/: constructor.md  extension_csv.md  extension_geometry.md  global_methods.md  index.md  methods.md  operators.md  properties.md
matply/doc/Guide/: getting-started.md  plan.md
matply/docs/: index.md
matply/docs/API/Dart/: constructor.md  extension_csv.md  extension_geometry.md  global_methods.md  index.md  methods.md  operators.md  (+1 more)
matply/docs/Guide/: getting-started.md  omp_design.md  plan.md
matply/lib/: matply.dart
matply/lib/src/: core.dart  errors.dart  list_extend.dart  matply.dart  matply_api.dart  matply_test.dart  matply_type_basement.dart  matrix_type.dart  matrix_type_func_condition.dart  matrix_type_linalg.dart  matrix_type_pure_math.dart  matrix_type_random.dart  matrix_type_visualization.dart
(+30 files in other folders)
